[gd_scene load_steps=10 format=3 uid="uid://mjqkiqui44w8"]

[ext_resource type="LabelSettings" uid="uid://cye4ts5vx0wlc" path="res://assets/fonts/GM_32_Dark.tres" id="1_5lcjl"]
[ext_resource type="Script" path="res://game_scene/game_scene.gd" id="1_48d5g"]
[ext_resource type="Texture2D" uid="uid://csiun4wls6khd" path="res://assets/ui/blue_button00.png" id="2_i3v76"]
[ext_resource type="PackedScene" uid="uid://b7d82a0s07v3d" path="res://memory_tile/memory_tile.tscn" id="2_w48rp"]
[ext_resource type="Texture2D" uid="uid://bbdt4hll6qssv" path="res://assets/ui/yellow_button00.png" id="3_gwuj5"]
[ext_resource type="Texture2D" uid="uid://dkqs8wjwlrq28" path="res://assets/ui/green_button00.png" id="4_3lnxy"]
[ext_resource type="LabelSettings" uid="uid://dc2orsolp3ye1" path="res://assets/fonts/GM_32_White.tres" id="5_i2ukt"]
[ext_resource type="PackedScene" uid="uid://dctdhbp2ynwcr" path="res://scorer/scorer.tscn" id="8_tivkg"]
[ext_resource type="PackedScene" uid="uid://jpxllno0lk5i" path="res://game_over/game_over.tscn" id="9_jopyr"]

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48d5g")
memory_tile_scene = ExtResource("2_w48rp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainerTiles" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TileContainer" type="GridContainer" parent="HBoxContainer/MarginContainerTiles"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainerTextLabels" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_right = 18

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainerTextLabels"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainerTextLabels/VBoxContainer"]
layout_mode = 2

[node name="MovesTextLabel" type="Label" parent="HBoxContainer/MarginContainerTextLabels/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves:
"
label_settings = ExtResource("1_5lcjl")

[node name="MovesAmountLabel" type="Label" parent="HBoxContainer/MarginContainerTextLabels/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "000
"
label_settings = ExtResource("1_5lcjl")
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/MarginContainerTextLabels/VBoxContainer"]
layout_mode = 2

[node name="PairsTextLabel" type="Label" parent="HBoxContainer/MarginContainerTextLabels/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pairs:
"
label_settings = ExtResource("1_5lcjl")

[node name="PairsAmountLabel" type="Label" parent="HBoxContainer/MarginContainerTextLabels/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0 / 00
"
label_settings = ExtResource("1_5lcjl")
horizontal_alignment = 2

[node name="SpacerControl" type="Control" parent="HBoxContainer/MarginContainerTextLabels/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HBoxContainer/MarginContainerTextLabels/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_i3v76")
texture_pressed = ExtResource("3_gwuj5")
texture_hover = ExtResource("4_3lnxy")

[node name="ExitTextLabel" type="Label" parent="HBoxContainer/MarginContainerTextLabels/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = ExtResource("5_i2ukt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Scorer" parent="." instance=ExtResource("8_tivkg")]

[node name="GameOver" parent="." instance=ExtResource("9_jopyr")]
visible = false
layout_mode = 1

[connection signal="pressed" from="HBoxContainer/MarginContainerTextLabels/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
